fixed spacing on about page

--- a/src/container/AboutUs/AboutUs.scss
+++ b/src/container/AboutUs/AboutUs.scss
@@ -24,7 +24,7 @@
   }
 
   @media screen and (min-width: 1280px) {
-    margin-top: 7rem;
+    margin-top: 8rem;
     padding-bottom: 4rem;
   }
 
